--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,7 +34,7 @@
     </nav>
     <h1>Welcome <span data-th-text="${email}"></span></h1><br>
     <form action="/search" method="GET">
-        Carpark: <select name="trainLine" th:name="trainLine">
+        Train level: <select name="trainLine" th:name="trainLine">
             <!-- <option 
                 data-th-each="i: ${carparks}"
                 data-th-text="${i.getDevelopment}">
